--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "dotenv": "^16.5.0",
     "expo": "~53.0.12",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.9.1",
     "react": "19.0.0",
-    "react-native": "0.79.4",
     "react-dom": "19.0.0",
+    "react-native": "0.79.4",
     "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4"
+    "expo-constants": "~17.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
