--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "dotenv": "^16.5.0",
     "expo": "~53.0.12",
+    "expo-constants": "~17.1.6",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.9.1",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
-    "react-native-web": "^0.20.0",
-    "expo-constants": "~17.1.6"
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3"
   },
   "private": true
