--- a/package.json
+++ b/package.json
@@ -11,19 +11,21 @@
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "autoprefixer": "^10.4.21",
     "dotenv": "^16.5.0",
     "expo": "~53.0.12",
     "expo-constants": "~17.1.6",
+    "expo-linear-gradient": "~14.1.5",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.9.1",
     "nativewind": "^4.1.23",
+    "postcss": "^8.5.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-web": "^0.20.0",
-    "expo-linear-gradient": "~14.1.5"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
